RESOLVED FIXED305485
[JSC] Fix Wasm-to-JS i31ref, anyref, eqref marshalling of i31 values
https://bugs.webkit.org/show_bug.cgi?id=305485
Summary [JSC] Fix Wasm-to-JS i31ref, anyref, eqref marshalling of i31 values
Dan Hecht
Reported 2026-01-14 09:29:15 PST
...
Attachments
Dan Hecht
Comment 1 2026-01-14 09:29:16 PST
Dan Hecht
Comment 2 2026-01-14 09:34:12 PST
EWS
Comment 3 2026-01-14 11:55:41 PST
Committed 305595@main (8579516f4b61): <https://commits.webkit.org/305595@main> Reviewed commits have been landed. Closing PR #56571 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.