Cherry-pick 8579516f4b61. rdar://168161480

[JSC] Fix JIT-less Wasm-to-JS i31ref, anyref, eqref marshalling of i31 values
    https://bugs.webkit.org/show_bug.cgi?id=305485
    rdar://164144482

    Reviewed by Justin Michaud.

    When a JS function is imported to wasm and returns an i31ref or
    anyref/eqref with an i31 value, the JIT-less marshalling code was
    converting legal i31 number JSValues to Int32 format for validation, but
    not actually returning that reformatted value back. So if the
    value was in double format, the i31 value would be incorrect.
    Fix this by writing back the converted value.

    Test: JSTests/wasm/gc/wasm-js-marshal-i31-return.js
    Canonical link: https://commits.webkit.org/305595@main

Identifier: 305413.20@safari-7624-branch